pkg/lang/testdata/ub/config/invalid/input-local-needs-name.ub
locals: { region: 'us-east-1' }

inputs: { region: local['region'] }
